k8snetwork-project/allow-my-app-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-my-app
spec:
  podSelector:
    matchLabels:
      app: my-app
  ingress:
  - from:
    - podSelector: {}
    ports:
    - protocol: TCP
      port: 80
